feat: верстка мобильного меню

--- a/src/index.html
+++ b/src/index.html
@@ -82,25 +82,25 @@
                 <div class="row">
                   <div class="col-6 d-flex flex-column align-items-start">
                     <a class="link link--nav dropdown__item" href="https://brandigital.ru/design">Москитные сетки</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/interior">Внутренняя</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Москитная дверь</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Стандарт</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Антипыль</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Антипыльца</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Антикошка</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Ультравью</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Проведал</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Внутренняя</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Москитная дверь</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Стандарт</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Антипыль</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Антипыльца</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Антикошка</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Ультравью</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Проведал</a>
                   </div>
                   <!-- /.col-6 -->
 
                   <div class="col-6 d-flex flex-column align-items-start">
                     <a class="link link--nav dropdown__item" href="https://brandigital.ru/design">Рулонные шторы</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/interior">Жалюзи</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">День-Ночь</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Плиссе</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Гранд</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Гранд День-Ночь</a>
-                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="https://brandigital.ru/souvenirs">Плиссе</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Жалюзи</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">День-Ночь</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Плиссе</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Гранд</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Гранд День-Ночь</a>
+                    <a class="link link--nav dropdown__item link link--nav dropdown__item--sub" href="">Плиссе</a>
                   </div>
                   <!-- /.col-6 -->
                 </div>
@@ -141,11 +141,155 @@
           <button data-micromodal-trigger="modal-callback" class="header__button button button-outline">Обратный звонок</button>
         </div>
         <!-- /.header__callback -->
+
+        <div class="header__mobile">
+          <button class="hamburger hamburger--squeeze" type="button">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+          </button>
+        </div>
+        <!-- /.header__mobile -->
       </div>
       <!-- /.header -->
     </div>
     <!-- /.container -->
   </header>
+
+  <div id="mobile-menu" class="mobile-menu">
+    <div class="mobile-menu__overlay"></div>
+
+    <div class="mobile-menu__container effect-fade effect-fade--bottom effect-fade--short">
+      <div class="mobile-menu__wrapper">
+        <nav class="mobile-menu__nav nav nav--mobile">
+          <ul class="nav__list">
+            <li class="nav__item mb-2"><a href="" class="nav__link">Главная</a></li>
+            <li class="nav__item mb-2">
+              <div class="handorgel handorgel--menu">
+                <div class="handorgel__header">
+                  <div class="handorgel__header__button">
+                    <h3 class="handorgel__title nav__link">Москитные сетки</h3>
+                    <div class="handorgel__indicator">
+                      <img alt="" class="handorgel__arrow" src="img/icons/control/arrow__dropdown.svg">
+                    </div>
+                    <!-- /.handorgel__indicator -->
+                  </div>
+                  <!-- /.handorgel__header__button -->
+                </div>
+                <!-- /.handorgel__header -->
+
+                <div class="handorgel__content">
+                  <div class="handorgel__content__inner">
+                    <p class="handorgel__content__text">
+                    <ul class="mobile-menu__list">
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Весь каталог</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Внутренняя</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Москитная дверь</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Стандарт</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Антипыль</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Антипыльца</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Антикошка</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Ультравью</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Проведал</a></li>
+                    </ul>
+                    </p>
+                  </div>
+                  <!-- /.handorgel__content__inner -->
+                </div>
+                <!-- /.handorgel__content -->
+              </div>
+              <!-- /.handorgel-->
+            </li>
+
+            <li class="nav__item mb-2">
+              <div class="handorgel handorgel--menu">
+                <div class="handorgel__header">
+                  <div class="handorgel__header__button">
+                    <h3 class="handorgel__title nav__link">Рулонные шторы</h3>
+                    <div class="handorgel__indicator">
+                      <img alt="" class="handorgel__arrow" src="img/icons/control/arrow__dropdown.svg">
+                    </div>
+                    <!-- /.handorgel__indicator -->
+                  </div>
+                  <!-- /.handorgel__header__button -->
+                </div>
+                <!-- /.handorgel__header -->
+
+                <div class="handorgel__content">
+                  <div class="handorgel__content__inner">
+                    <p class="handorgel__content__text">
+                    <ul class="mobile-menu__list">
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Весь каталог</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Жалюзи</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">День-Ночь</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Плиссе</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Гранд</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Гранд День-Ночь</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Плиссе</a></li>
+                    </ul>
+                    </p>
+                  </div>
+                  <!-- /.handorgel__content__inner -->
+                </div>
+                <!-- /.handorgel__content -->
+              </div>
+              <!-- /.handorgel-->
+            </li>
+
+            <li class="nav__item mb-2">
+              <div class="handorgel handorgel--menu">
+                <div class="handorgel__header">
+                  <div class="handorgel__header__button">
+                    <h3 class="handorgel__title nav__link">Услуги</h3>
+                    <div class="handorgel__indicator">
+                      <img alt="" class="handorgel__arrow" src="img/icons/control/arrow__dropdown.svg">
+                    </div>
+                    <!-- /.handorgel__indicator -->
+                  </div>
+                  <!-- /.handorgel__header__button -->
+                </div>
+                <!-- /.handorgel__header -->
+
+                <div class="handorgel__content">
+                  <div class="handorgel__content__inner">
+                    <p class="handorgel__content__text">
+                    <ul class="mobile-menu__dropdown">
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Тонировка окон</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Регулировка окон</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Замки от детей</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Замена уплотнителя</a></li>
+                      <li class="nav__item nav__item--small"><a href="" class="nav__link">Ограничители</a></li>
+                    </ul>
+                    </p>
+                  </div>
+                  <!-- /.handorgel__content__inner -->
+                </div>
+                <!-- /.handorgel__content -->
+              </div>
+              <!-- /.handorgel-->
+            </li>
+            <li class="nav__item mb-2"><a href="" class="nav__link">Портфолио</a></li>
+            <li class="nav__item mb-2"><a href="" class="nav__link">Статьи</a></li>
+            <li class="nav__item"><a href="" target="_blank" class="nav__link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <div class="mobile-menu__action">
+          <div class="d-flex flex-column mb-3 mt-4">
+            <a class="header__phone link link--contact" href="tel:+">+7 926 630-45-56</a>
+            <a class="header__phone link link--contact" href="tel:+">+7 977 415-28-17</a>
+          </div>
+
+          <button data-micromodal-trigger="modal-callback" class="header__button button button-outline">Обратный звонок</button>
+        </div>
+        <!-- /.mobile-menu__action -->
+      </div>
+      <!-- /.mobile-menu__wrapper -->
+    </div>
+    <!-- /.mobile-menu__container -->
+  </div>
+  <!-- /.mobile-menu -->
+
 
   <!-- Основной контент -->
   <main id="home">
@@ -1561,6 +1705,7 @@
   <script src="scripts/libraries/tippy.js"></script>
   <script src="scripts/libraries/imask.js"></script>
   <script src="scripts/libraries/forms.js"></script>
+  <script src="scripts/libraries/handorgel.min.js"></script>
 
   <script src="scripts/init.js"></script>
   <script src="scripts/slider.js"></script>
