feat: мобильная версия большей части главной

--- a/src/index.html
+++ b/src/index.html
@@ -690,7 +690,7 @@
           </p>
 
           <div class="row">
-            <div class="col-4 mb-5">
+            <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-5">
               <div class="service__item">
                 <div class="service__picture">
                   <img src="img/section/catalog/adjustment.jpg" alt="" class="service__image image image--cover">
@@ -715,7 +715,7 @@
             </div>
             <!-- /.col-4 -->
 
-            <div class="col-4 mb-5">
+            <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-5">
               <div class="service__item">
                 <div class="service__picture">
                   <img src="img/section/catalog/lock.jpg" alt="" class="service__image image image--cover">
@@ -740,7 +740,7 @@
             </div>
             <!-- /.col-4 -->
 
-            <div class="col-4 mb-5">
+            <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-5">
               <div class="service__item">
                 <div class="service__picture">
                   <img src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover">
@@ -765,7 +765,7 @@
             </div>
             <!-- /.col-4 -->
 
-            <div class="col-4">
+            <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-0">
               <div class="service__item">
                 <div class="service__picture">
                   <img src="img/section/catalog/tinting.jpg" alt="" class="service__image image image--cover">
@@ -790,7 +790,7 @@
             </div>
             <!-- /.col-4 -->
 
-            <div class="col-4">
+            <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-0">
               <div class="service__item">
                 <div class="service__picture">
                   <img src="img/section/catalog/compressor.png" alt="" class="service__image image image--cover">
@@ -815,7 +815,7 @@
             </div>
             <!-- /.col-4 -->
 
-            <div class="col-4">
+            <div class="col-12 col-sm-6 col-lg-4">
               <div class="service__item">
                 <div class="service__picture">
                   <img src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover">
@@ -853,7 +853,7 @@
           <h2 class="section__title">География нашей работы</h2>
 
           <div class="row">
-            <div class="col-6 col-xl-7">
+            <div class="col-12 col-lg-6 col-xl-7">
               <div id="map-wrapper" class="map__wrapper">
                 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aeb43c71a35f82b72f4fb211ee6d0101918a651b0d54c8fcffdf3354cc4e95772&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
               </div>
@@ -861,7 +861,7 @@
             </div>
             <!-- /.col-6 -->
 
-            <div class="col-6 col-xl-5">
+            <div class="col-12 col-lg-6 col-xl-5">
               <form class="form form-map" action="">
                 <h3 class="form__title">Не увидели свой район или город?</h3>
                 <p class="form__description">Оставьте заявку, и наш менеджер перезвонит Вам и уточнит территорию по которой мы работаем!</p>
@@ -1018,7 +1018,7 @@
           <ul class="order__list">
             <li class="order__item">
               <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__picture">
                     <img class="order__image image image--cover" src="img/page/main/order/checkout.jpg" alt="">
                   </div>
@@ -1026,7 +1026,7 @@
                 </div>
                 <!-- /.col-6 -->
 
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__content">
                     <h3 class="order__title">Вы выбираете изделие или услугу</h3>
                     <p class="order__description">На сайте предоставлены калькуляторы по различным услугам. Вы можете заказать услугу или изделие через них или же позвонить нашему менеджеру</p>
@@ -1041,7 +1041,7 @@
 
             <li class="order__item">
               <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__picture">
                     <img class="order__image image image--cover" src="img/page/main/order/measuring.jpg" alt="">
                   </div>
@@ -1049,7 +1049,7 @@
                 </div>
                 <!-- /.col-6 -->
 
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__content">
                     <h3 class="order__title">К Вам выезжает наш специалист на замер</h3>
                     <p class="order__description">Мастер-консультант поможет с выбором цветового решения, даст рекомендации по конструкциям изделий и произведет точный замер места установки</p>
@@ -1064,7 +1064,7 @@
 
             <li class="order__item">
               <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__picture">
                     <img class="order__image image image--cover" src="img/page/main/order/contract.jpg" alt="">
                   </div>
@@ -1072,7 +1072,7 @@
                 </div>
                 <!-- /.col-6 -->
 
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__content">
                     <h3 class="order__title">Мы заключаем с Вами договор</h3>
                     <p class="order__description">Уточняем детали проекта, вносим в него изменения, если это необходимо и заключаем договор. В нем прописаны условия исполнения заказа, а так же рабочие сроки.</p>
@@ -1087,7 +1087,7 @@
 
             <li class="order__item">
               <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__picture">
                     <img class="order__image image image--cover" src="img/page/main/order/crafting.jpg" alt="">
                   </div>
@@ -1095,7 +1095,7 @@
                 </div>
                 <!-- /.col-6 -->
 
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__content">
                     <h3 class="order__title">Начинаем изготовление вашего заказа
                     </h3>
@@ -1111,7 +1111,7 @@
 
             <li class="order__item">
               <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__picture">
                     <img class="order__image image image--cover" src="img/page/main/order/delivery.jpg" alt="">
                   </div>
@@ -1119,7 +1119,7 @@
                 </div>
                 <!-- /.col-6 -->
 
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                   <div class="order__content">
                     <h3 class="order__title">Доставка, установка и гарантия</h3>
                     <p class="order__description">Доставка и монтаж изделия не включаются в сумму заказа. Цену доставки за пределы города и в другие города, уточняйте у менеджеров нашего салона.</p>
@@ -1415,7 +1415,7 @@
       <div class="container">
         <div class="callback">
           <div class="row">
-            <div class="col-5">
+            <div class="col-12 col-md-5">
               <h2 class="section__title">Если у вас остались вопросы</h2>
               <p class="section__description">
                 Свяжитесь с нашими менеджерами по горячей линии
@@ -1427,7 +1427,7 @@
 
               <form action="" class="form form-callback">
                 <div class="form__wrapper">
-                  <div class="input me-3">
+                  <div class="input me-md-3 mb-3 mb-md-0">
                     <input data-required placeholder="Номер телефона" autocomplete="off" type="tel" name="" class="input__field">
                     <img data-tippy-content="Номер телефона указан не полностью или содержит ошибки" class="input__warning" src="img/icons/misc/warning.svg" alt="">
                   </div>
@@ -1449,7 +1449,7 @@
             </div>
             <!-- /.col-6 -->
 
-            <div class="col-5 offset-2">
+            <div class="col-12 col-md-5 offset-2">
               <div class="callback__picture">
                 <img src="img/block/callback/call.jpg" alt="" class="callback__image image image--cover">
               </div>
@@ -1470,12 +1470,7 @@
     <div class="container">
       <div class="footer">
         <div class="footer__row">
-
-        </div>
-        <!-- /.footer__row -->
-
-        <div class="footer__row">
-          <div class="footer__nav">
+          <div class="footer__nav mb-4 mb-md-0">
             <a href="" class="footer__title footer__link link link--nav">Навигация</a>
             <nav class="nav nav--footer">
               <ul class="nav__list">
@@ -1507,7 +1502,7 @@
           </div>
           <!-- /.footer__nav -->
 
-          <div class="footer__nav">
+          <div class="footer__nav mb-4 mb-md-0">
             <a href="" class="footer__title footer__link link link--nav">Москитные сетки</a>
             <nav class="nav nav--footer">
               <ul class="nav__list">
@@ -1611,15 +1606,15 @@
 
         <div class="footer__row">
           <div class="footer__social">
-            <div class="footer__logo logo logo--footer mb-4">
+            <div class="footer__logo logo logo--footer mb-md-4">
               <a href="">
                 <img alt="" class="logo__image" src="img/logo--footer.svg">
               </a>
             </div>
             <!-- /.header__logo logo -->
 
-            <a href="" class="link">
-              <img class="footer__icon me-3 ms-4" src="img/icons/social/instagram.svg" alt="">
+            <a href="" class="link ms-auto ms-md-0">
+              <img class="footer__icon me-3 ms-md-4" src="img/icons/social/instagram.svg" alt="">
             </a>
 
             <a href="" class="link">
