feat: ленивая загрузка для изображений и карты

--- a/src/index.html
+++ b/src/index.html
@@ -389,8 +389,9 @@
           <div class="row mb-4">
             <div class="col-6">
               <div class="catalog__item">
-                <div class="catalog__picture">
-                  <img src="img/section/catalog/nets.jpg" alt="" class="catalog__image image image--cover">
+                <div class="catalog__picture position-relative">
+                  <img src="img/misc/preloader.svg" class="preloader" alt="">
+                  <img data-src="img/section/catalog/nets.jpg" alt="" class="catalog__image image image--cover lazy">
                 </div>
                 <!-- /.catalog__picture -->
 
@@ -418,8 +419,9 @@
 
             <div class="col-6">
               <div class="catalog__item">
-                <div class="catalog__picture">
-                  <img src="img/section/catalog/curtains.jpg" alt="" class="catalog__image image image--cover">
+                <div class="catalog__picture position-relative">
+                  <img src="img/misc/preloader.svg" class="preloader" alt="">
+                  <img data-src="img/section/catalog/curtains.jpg" alt="" class="catalog__image image image--cover lazy">
                 </div>
                 <!-- /.catalog__picture -->
 
@@ -692,8 +694,9 @@
           <div class="row">
             <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-5">
               <div class="service__item">
-                <div class="service__picture">
-                  <img src="img/section/catalog/adjustment.jpg" alt="" class="service__image image image--cover">
+                <div class="service__picture position-relative">
+                  <img src="img/misc/preloader.svg" class="preloader" alt="">
+                  <img data-src="img/section/catalog/adjustment.jpg" alt="" class="service__image image image--cover lazy">
                 </div>
                 <!-- /.service__picture -->
 
@@ -717,8 +720,9 @@
 
             <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-5">
               <div class="service__item">
-                <div class="service__picture">
-                  <img src="img/section/catalog/lock.jpg" alt="" class="service__image image image--cover">
+                <div class="service__picture position-relative">
+                  <img src="img/misc/preloader.svg" class="preloader" alt="">
+                  <img data-src="img/section/catalog/lock.jpg" alt="" class="service__image image image--cover lazy">
                 </div>
                 <!-- /.service__picture -->
 
@@ -742,8 +746,9 @@
 
             <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-5">
               <div class="service__item">
-                <div class="service__picture">
-                  <img src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover">
+                <div class="service__picture position-relative">
+                  <img src="img/misc/preloader.svg" class="preloader" alt="">
+                  <img data-src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover lazy">
                 </div>
                 <!-- /.service__picture -->
 
@@ -767,8 +772,9 @@
 
             <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-0">
               <div class="service__item">
-                <div class="service__picture">
-                  <img src="img/section/catalog/tinting.jpg" alt="" class="service__image image image--cover">
+                <div class="service__picture position-relative">
+                  <img src="img/misc/preloader.svg" class="preloader" alt="">
+                  <img data-src="img/section/catalog/tinting.jpg" alt="" class="service__image image image--cover lazy">
                 </div>
                 <!-- /.service__picture -->
 
@@ -792,8 +798,9 @@
 
             <div class="col-12 col-sm-6 col-lg-4 mb-3 mb-sm-0">
               <div class="service__item">
-                <div class="service__picture">
-                  <img src="img/section/catalog/compressor.png" alt="" class="service__image image image--cover">
+                <div class="service__picture position-relative">
+                  <img src="img/misc/preloader.svg" class="preloader" alt="">
+                  <img data-src="img/section/catalog/compressor.png" alt="" class="service__image image image--cover lazy">
                 </div>
                 <!-- /.service__picture -->
 
@@ -817,8 +824,9 @@
 
             <div class="col-12 col-sm-6 col-lg-4">
               <div class="service__item">
-                <div class="service__picture">
-                  <img src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover">
+                <div class="service__picture position-relative">
+                  <img src="img/misc/preloader.svg" class="preloader" alt="">
+                  <img data-src="img/section/catalog/limiter.jpg" alt="" class="service__image image image--cover lazy">
                 </div>
                 <!-- /.service__picture -->
 
@@ -854,8 +862,8 @@
 
           <div class="row">
             <div class="col-12 col-lg-6 col-xl-7">
-              <div id="map-wrapper" class="map__wrapper">
-                <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Aeb43c71a35f82b72f4fb211ee6d0101918a651b0d54c8fcffdf3354cc4e95772&amp;width=100%&amp;height=100%&amp;lang=ru_RU&amp;scroll=false"></script>
+              <div id="map-wrapper" class="map__wrapper position-relative lazy" data-lazy-function="map">
+                <img src="img/misc/preloader.svg" class="preloader" alt="">
               </div>
               <!-- /.map -->
             </div>
@@ -1019,8 +1027,9 @@
             <li class="order__item">
               <div class="row">
                 <div class="col-12 col-md-6">
-                  <div class="order__picture">
-                    <img class="order__image image image--cover" src="img/page/main/order/checkout.jpg" alt="">
+                  <div class="order__picture position-relative">
+                    <img src="img/misc/preloader.svg" class="preloader" alt="">
+                    <img class="order__image image image--cover lazy" data-src="img/page/main/order/checkout.jpg" alt="">
                   </div>
                   <!-- /.order__picture -->
                 </div>
@@ -1042,8 +1051,9 @@
             <li class="order__item">
               <div class="row">
                 <div class="col-12 col-md-6">
-                  <div class="order__picture">
-                    <img class="order__image image image--cover" src="img/page/main/order/measuring.jpg" alt="">
+                  <div class="order__picture position-relative">
+                    <img src="img/misc/preloader.svg" class="preloader" alt="">
+                    <img class="order__image image image--cover lazy" data-src="img/page/main/order/measuring.jpg" alt="">
                   </div>
                   <!-- /.order__picture -->
                 </div>
@@ -1065,8 +1075,9 @@
             <li class="order__item">
               <div class="row">
                 <div class="col-12 col-md-6">
-                  <div class="order__picture">
-                    <img class="order__image image image--cover" src="img/page/main/order/contract.jpg" alt="">
+                  <div class="order__picture position-relative">
+                    <img src="img/misc/preloader.svg" class="preloader" alt="">
+                    <img class="order__image image image--cover lazy" data-src="img/page/main/order/contract.jpg" alt="">
                   </div>
                   <!-- /.order__picture -->
                 </div>
@@ -1088,8 +1099,9 @@
             <li class="order__item">
               <div class="row">
                 <div class="col-12 col-md-6">
-                  <div class="order__picture">
-                    <img class="order__image image image--cover" src="img/page/main/order/crafting.jpg" alt="">
+                  <div class="order__picture position-relative">
+                    <img src="img/misc/preloader.svg" class="preloader" alt="">
+                    <img class="order__image image image--cover lazy" data-src="img/page/main/order/crafting.jpg" alt="">
                   </div>
                   <!-- /.order__picture -->
                 </div>
@@ -1112,8 +1124,9 @@
             <li class="order__item">
               <div class="row">
                 <div class="col-12 col-md-6">
-                  <div class="order__picture">
-                    <img class="order__image image image--cover" src="img/page/main/order/delivery.jpg" alt="">
+                  <div class="order__picture position-relative">
+                    <img src="img/misc/preloader.svg" class="preloader" alt="">
+                    <img class="order__image image image--cover lazy" data-src="img/page/main/order/delivery.jpg" alt="">
                   </div>
                   <!-- /.order__picture -->
                 </div>
@@ -1450,8 +1463,9 @@
             <!-- /.col-6 -->
 
             <div class="col-12 col-md-5 offset-2">
-              <div class="callback__picture">
-                <img src="img/block/callback/call.jpg" alt="" class="callback__image image image--cover">
+              <div class="callback__picture position-relative">
+                <img src="img/misc/preloader.svg" class="preloader" alt="">
+                <img data-src="img/block/callback/call.jpg" alt="" class="callback__image image image--cover lazy">
               </div>
               <!-- /.callback__picture -->
             </div>
@@ -1703,6 +1717,7 @@
   <script src="scripts/libraries/handorgel.min.js"></script>
 
   <script src="scripts/init.js"></script>
+  <script src="scripts/lazyload.js"></script>
   <script src="scripts/slider.js"></script>
   <script src="scripts/header.js"></script>
   <script src="scripts/calculator.js"></script>
