feat: адаптив под мобильные устройства

--- a/src/index.html
+++ b/src/index.html
@@ -296,14 +296,14 @@
     <section id="hero" class="section">
       <div class="container">
         <div class="hero">
-          <div class="row">
-            <div class="col-6">
+          <div class="row position-relative">
+            <div class="col-12 col-md-6">
               <div class="hero__content">
                 <h1 class="hero__title page__title section__title">
                   <span>ИЗГОТОВЛЕНИЕ НА ЗАКАЗ</span> <br> МОСКИТНЫХ СЕТОК <br> РУЛОННЫХ ШТОР И ЖАЛЮЗИ
                 </h1>
 
-                <h2 class="hero__subtite section__title">Изделия любой сложности и формы от производителя</h2>
+                <h2 class="hero__subtitle section__title">Изделия любой сложности и формы от производителя</h2>
 
                 <div class="hero__advantages">
                   <ul class="hero__list list list--mark">
@@ -319,7 +319,7 @@
             </div>
             <!-- /.col-6 -->
 
-            <div class="col-6">
+            <div class="col-12 col-md-6">
               <div class="hero__slider">
                 <div class="swiper slider-hero">
                   <div class="swiper-wrapper">
@@ -387,7 +387,7 @@
           <!-- /.section__header -->
 
           <div class="row mb-4">
-            <div class="col-6">
+            <div class="col-12 col-md-6 mb-3 mb-md-0">
               <div class="catalog__item">
                 <div class="catalog__picture position-relative">
                   <img src="img/misc/preloader.svg" class="preloader" alt="">
@@ -417,7 +417,7 @@
             </div>
             <!-- /.col-6 -->
 
-            <div class="col-6">
+            <div class="col-12 col-md-6">
               <div class="catalog__item">
                 <div class="catalog__picture position-relative">
                   <img src="img/misc/preloader.svg" class="preloader" alt="">
