feat: небольшие правки адаптива

--- a/src/index.html
+++ b/src/index.html
@@ -417,7 +417,7 @@
             </div>
             <!-- /.col-6 -->
 
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 mb-3 mb-md-0">
               <div class="catalog__item">
                 <div class="catalog__picture position-relative">
                   <img src="img/misc/preloader.svg" class="preloader" alt="">
